--- a/_posts/2023-01-24-bart.md
+++ b/_posts/2023-01-24-bart.md
@@ -1,10 +1,8 @@
 ---
 layout: post
-title: "A new website"
+title: "Bart"
 author: "Colin Ganzevoort"
 categories: blog
 ---
 
-<p class="dropcap">Hello bart
-
-</p>
+<p class="dropcap">Hallo bart!</p>
